# Android-lofi-Audio-Recorder

./: local.properties  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/cosmo388/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioProcessor.cpp  AudioProcessor.h  AudioRecorder.cpp  AudioRecorderWrapper.cpp  AudioRecorderWrapper.h  Audiofile.h  CMakeLists.txt
app/src/main/java/com/example/cosmo388/: FileListAdapter.kt  MainActivity.kt
app/src/main/res/layout/: activity_main.xml  menuadapter.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/cosmo388/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
